--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "@elevenlabs/client": "^0.7.1",
     "@elevenlabs/elevenlabs-js": "^2.17.0",
     "@elevenlabs/react": "^0.7.1",
     "@emotion/is-prop-valid": "latest",
-    "@hookform/resolvers": "^3.9.1",
     "@mcp-ui/client": "latest",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
@@ -42,30 +40,18 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
-    "@vercel/analytics": "1.3.1",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "date-fns": "4.1.0",
-    "embla-carousel-react": "8.5.1",
     "framer-motion": "latest",
-    "geist": "^1.3.1",
-    "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
-    "next-themes": "^0.4.4",
     "react": "^18",
-    "react-day-picker": "9.8.0",
     "react-dom": "^18",
-    "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
-    "recharts": "2.15.0",
-    "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.6",
-    "zod": "^3.24.1"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^22",
